--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <li><a href="scanner.html" class="nav__links">Escáner</a></li>
                 <li><a href="features.html" class="nav__links">Funciones</a></li>
                 <li><a href="support.html" class="nav__links">Soporte</a></li>
+                <li><a href="control.html" class="nav__links">Control</a></li>
             </ul>
             <div class="nav__menu">☰</div>
         </nav>
