--- a/features.html
+++ b/features.html
@@ -91,18 +91,51 @@
         <section class="testimonials">
             <div class="container">
                 <h3 class="subtitle">Testimonios de Usuarios</h3>
+                <p class="testimonials__intro">
+                    Personas que ya han probado Smartfood XR comparten cómo el escáner inteligente de frutas
+                    les ayuda a entender mejor lo que consumen cada día.
+                </p>
+
                 <div class="testimonials__grid">
                     <div class="testimonial__card">
-                        <p class="testimonial__text">"Smartfood XR ha cambiado mi forma de ver la nutrición. Ahora sé exactamente lo que estoy comiendo y cómo afecta a mi salud."</p>
-                        <p class="testimonial__author">- Ana Martínez</p>
+                        <div class="testimonial__quote">“</div>
+                        <p class="testimonial__text">
+                            Smartfood XR ha cambiado mi forma de ver la nutrición. Ahora sé exactamente
+                            lo que estoy comiendo y cómo afecta a mi salud.
+                        </p>
+                        <p class="testimonial__author">Ana Martínez</p>
+                        <p class="testimonial__role">Estudiante universitaria</p>
                     </div>
+
                     <div class="testimonial__card">
-                        <p class="testimonial__text">"La aplicación es increíblemente precisa y fácil de usar. ¡La recomiendo a todos mis amigos!"</p>
-                        <p class="testimonial__author">- Luis García</p>
+                        <div class="testimonial__quote">“</div>
+                        <p class="testimonial__text">
+                            La aplicación es increíblemente precisa y fácil de usar.
+                            La recomiendo a todos mis amigos y familiares.
+                        </p>
+                        <p class="testimonial__author">Luis García</p>
+                        <p class="testimonial__role">Entrenador personal</p>
+                    </div>
+
+                    <div class="testimonial__card testimonial__card--highlight">
+                        <div class="testimonial__quote">“</div>
+                        <p class="testimonial__text">
+                            ¿Ya probaste Smartfood XR? Cuéntanos tu experiencia y ayúdanos a mejorar
+                            el escáner inteligente para más usuarios.
+                        </p>
+                        <p class="testimonial__author">Tú puedes ser el siguiente ⭐</p>
+
+                        <a class="testimonial__button"
+                        href="https://docs.google.com/forms/d/e/1FAIpQLSd1NLbQY1QwaLv0iEVj709MzZCE0S25kocAPl8FpMwS4KLdyw/viewform?fbzx=-8690297503159657837"
+                        target="_blank"
+                        rel="noopener noreferrer">
+                            Dejar mi opinión
+                        </a>
                     </div>
                 </div>
             </div>
         </section>
+
     </main>
 
     <footer class="footer">
