--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             <ul class="nav__link">
                 <li><a href="index.html" class="nav__links">Inicio</a></li>
-                <li><a href="scanner.html" class="nav__links">Escáner</a></li>
+                <li><a href="scanner.html" class="nav__links">Demo</a></li>
                 <li><a href="features.html" class="nav__links">Funciones</a></li>
                 <li><a href="support.html" class="nav__links">Soporte</a></li>
                 <li><a href="control.html" class="nav__links">Control</a></li>
@@ -41,7 +41,7 @@
                     <div class="scanner__content">
                         <h2>Escáner Inteligente</h2>
                         <p>Utiliza la cámara de tu dispositivo para identificar frutas automáticamente. Nuestro sistema de inteligencia artificial reconoce más de 100 tipos diferentes de frutas y te proporciona información nutricional precisa.</p>
-                        <a href="scanner.html" class="cta">Abrir Cámara</a>
+                        <a href="scanner.html" class="cta">Ver demostracion</a>
                     </div>
                     <div class="scanner__demo">
                         <div class="camera__preview" onclick="startScan()">📱</div>
