add control all

--- a/control.html
+++ b/control.html
@@ -198,6 +198,7 @@
     <div class="header">
         <h1>🍎 Tablero de Control Nutricional - Métricas de Calidad</h1>
         <p>Sistema de Análisis y Monitoreo de Detección de Frutas y Verduras con IA</p>
+        <li><a href="ndex.html" class="nav__links">Menu de inicio</a></li>
     </div>
 
     <div class="dashboard" id="dashboard"></div>
